actualizo el contenedor de libros de la pagina principal de la libreria

--- a/public/biblioteca.html
+++ b/public/biblioteca.html
@@ -102,9 +102,50 @@
                 </div>
              </section>
 
-             <section class="section-libros">
-                <div>
-                    
+
+             <!-- ---------- CONTENEDOR DE LIBROS---------- -->
+             <section class="contenedor-libros">
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
+                </div>
+
+                <div class="libro">
+                    <img src="Img/portada-prueva.jpg" alt="">
                 </div>
              </section>
 
