--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>iniciar-sesion</title>
-    <link rel="stylesheet" href="diseño-login.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="contenedor">
