se siguen haciendo cambios visuales

--- a/public/biblioteca.html
+++ b/public/biblioteca.html
@@ -75,7 +75,7 @@
         <main class="contenedor-categorias">
 
             <!-- ---SECCION DE LAS CATERGORIAS-- -->
-             <section class="categorias">
+            <section class="categorias">
                 <div class="categoria">
                     <img src="Img/Literatura.png" alt="literatura-novelas">
                     <p>Literatura y novelas</p>
@@ -100,11 +100,11 @@
                     <img src="Img/desarrollo.png" alt="desarrolo-personal">
                     <p>Desarrollo personal</p>
                 </div>
-             </section>
+            </section>
 
 
-             <!-- ---------- CONTENEDOR DE LIBROS---------- -->
-             <section class="contenedor-libros">
+            <!-- ---------- CONTENEDOR DE LIBROS---------- -->
+            <section class="contenedor-libros">
                 <div class="libro">
                     <img src="https://i.pinimg.com/736x/38/da/5a/38da5a2a7472933a2df9d1e0a723ea1b.jpg" alt="">
                 </div>
@@ -163,20 +163,126 @@
                     <img src="https://i.pinimg.com/1200x/6d/4f/86/6d4f86ee70a2ae0fa77f80fe4c0a9647.jpg" alt="">
                     </div>
 
-                    <div class="libro">
+                <div class="libro">
                     <img src="https://i.pinimg.com/736x/b7/62/34/b76234f91161f081a553f95efdca287a.jpg" alt="">
                     </div>
 
-                    <div class="libro">
+                <div class="libro">
                     <img src="https://i.pinimg.com/1200x/bf/7c/1f/bf7c1fcf22364ade75ff00deb3db0d82.jpg" alt="">
                     </div>
 
-                     <div class="libro">
+                <div class="libro">
                     <img src="https://i.pinimg.com/736x/74/10/86/741086f17dae324bacefbeefc90b216c.jpg" alt="">
                     </div>
 
-             </section>
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/80/d3/a8/80d3a82a35942c368ffabd42aa78a49f.jpg" alt="">
+                    </div>
 
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/7d/30/6c/7d306c9a16df7c82525bcd67f49128dd.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/b1/fb/8b/b1fb8bb24da3c173a8d7861794b4c43b.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/1200x/af/03/9f/af039f8524e44b93b304905d34498b42.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/82/f6/be/82f6be1b0cf952acdebb06e2d75351a6.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/50/7a/4c/507a4c5a5efc8e3fdabc28a09510fa68.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/1200x/1b/2d/e8/1b2de8e888caa8e18d4759722c590da2.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="" alt="">
+                    </div>
+                </section>
         </main>
 
     </body>
