temine todos los modulos de la biblioteca

--- a/public/arte.html
+++ b/public/arte.html
@@ -3,7 +3,7 @@
 <head>
     <title>Arte</title>
     
-    <link rel="stylesheet" href="arte.css">
+    <link rel="stylesheet" href="css/arte.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
