--- a/public/biblioteca.html
+++ b/public/biblioteca.html
@@ -3,7 +3,7 @@
 <head>
     <title>Biblioteca</title>
     
-    <link rel="stylesheet" href="biblioteca.css">
+    <link rel="stylesheet" href="css/biblioteca.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
