--- a/public/ciencia.html
+++ b/public/ciencia.html
@@ -3,7 +3,7 @@
 <head>
     <title>Ciencia</title>
     
-    <link rel="stylesheet" href="ciencia.css">
+    <link rel="stylesheet" href="css/ciencia.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
