--- a/public/desarrollo.html
+++ b/public/desarrollo.html
@@ -3,7 +3,7 @@
 <head>
     <title>Desarrollo</title>
     
-    <link rel="stylesheet" href="desarrollo.css">
+    <link rel="stylesheet" href="css/desarrollo.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
