--- a/public/historia.html
+++ b/public/historia.html
@@ -3,7 +3,7 @@
 <head>
     <title>Historia</title>
     
-    <link rel="stylesheet" href="historia.css">
+    <link rel="stylesheet" href="css/historia.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
