--- a/public/historial-leidos.html
+++ b/public/historial-leidos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Literatura</title>
+    <title>historial-leidos</title>
     
-    <link rel="stylesheet" href="css/literatura.css">
+    <link rel="stylesheet" href="css/historial-leidos.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
@@ -74,8 +74,8 @@
             <!-- ---SECCION DE LAS CATERGORIAS-- -->
              <section class="categorias">
                 <div class="categoria">
-                    <img src="Img/Literatura.png" alt="literatura-novelas">
-                    <p>Literatura y novelas</p>
+                    <img src="Img/historial.png" alt="literatura-novelas">
+                    <p>libros leidos</p>
                 </div>
              </section>
 
