--- a/public/registro.html
+++ b/public/registro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Registrate</title>
-    <link rel="stylesheet" href="registro.css">
+    <link rel="stylesheet" href="css/registro.css">
 </head>
 <body>
     <div class="contenedor">
