--- a/public/favoritos.html
+++ b/public/favoritos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Literatura</title>
+    <title>favoritos</title>
     
-    <link rel="stylesheet" href="css/literatura.css">
+    <link rel="stylesheet" href="css/favoritos.css">
 </head>
 <body>
         <!-- esta es la barra lateral -->
@@ -73,9 +73,9 @@
 
             <!-- ---SECCION DE LAS CATERGORIAS-- -->
              <section class="categorias">
-                <div class="categoria">
-                    <img src="Img/Literatura.png" alt="literatura-novelas">
-                    <p>Literatura y novelas</p>
+                 <div class="categoria">
+                    <img src="Img/favoritos_1.png" alt="historia-cultura">
+                    <p>Libros que me gustaron</p>
                 </div>
              </section>
 
