se terminaron los cambios

--- a/public/biblioteca.html
+++ b/public/biblioteca.html
@@ -204,84 +204,147 @@
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/2d/e8/a4/2de8a480886de35a809ec10b31c8d6ee.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/0a/02/0f/0a020f24833721e1345802815862865d.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/73/5d/fb/735dfbe297b335d5f2198086667c095e.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/fd/0c/62/fd0c62cb26eb3b3c1113aafaf57e1175.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/5c/7d/01/5c7d018ee671bd952d48708d4803d1da.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/af/88/8e/af888e75c76300ac5ca7bcf2de762ce7.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/72/58/51/725851dacc543c57a8ade0a4b556c8d2.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/67/7d/0c/677d0c8e0d7e88b325893475583d77f3.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/f2/ac/ba/f2acba580d05d4f9be39f0475612abc8.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/37/b6/ba/37b6baf1d1c6e11212a6d58d53ea141c.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/c2/c5/87/c2c5876ffc40c3c00f245c8675c301e9.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/23/0c/8b/230c8b6c27100603a4eb541e4be17838.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/8d/6b/4b/8d6b4b3b96a33d85abfe47a89551d8d5.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/b3/dd/69/b3dd69bda09e2b2bf4c5b26e8310c997.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/58/cd/47/58cd47998ba211d8b0e45cf9a6d9cb32.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/48/0a/0b/480a0b03033fc0d2857a656430ae7727.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/5b/55/88/5b5588929b6f46d55f62e775c3e8d101.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/9c/14/b9/9c14b94f438866f87cb6af6128142b90.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/736x/df/5c/3f/df5c3fef702f6aab84ad5c38f4da75c8.jpg" alt="">
                     </div>
 
                 <div class="libro">
-                    <img src="" alt="">
+                    <img src="https://i.pinimg.com/1200x/bd/37/28/bd37281986c12fd39b9da521845f7fb0.jpg" alt="">
                     </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/58/8c/12/588c125a359d656aed75072527765dfd.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/1200x/11/2c/0d/112c0db36227a13365cfcb6254e219eb.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/bd/d6/ff/bdd6ff9430fa091a19c185754fdaf0fb.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/84/d5/bf/84d5bf10bbd743e54cad6865317b8681.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/54/6c/fb/546cfb5ca515ef9e2717604ed86009bc.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/b6/af/ba/b6afbafff3b6d316367d6a6b84a6dae0.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/2d/3f/7a/2d3f7a14da75d0b86104a1ed771d841a.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/21/39/9d/21399d7bb162f7dba0b50c32674ea9e4.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://imgs.search.brave.com/kXHg5UcMl4p7LQL89a_V1uo8ZhsUe_5Tz9pS2sJDAGg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/YmFiZWxsaWJyb3Mu/Y29tL2ltYWdlbmVz/Lzk3ODg0NjYvOTc4/ODQ2NjM1MzQ3LkpQ/Rw" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://i.pinimg.com/736x/1f/84/33/1f8433883735b9d995bd10d1eb896f57.jpg" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://imgs.search.brave.com/uzOEBWvOL20CUzTZGe04w0_xinEKVnx0UMC1dYx07F0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL0kv/NTFWODQxYXNvckwu/anBn" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://imgs.search.brave.com/bY-k5hWR-LKycRbHOAfw71rLatyeDBTCTIRyURmtaUg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL0kv/NDFpU0lCN2RsLUwu/anBn" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://imgs.search.brave.com/RWwUvymEv_Ajuw6Mfan06nHfGyZHCAXTD6zOwVq7ABw/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMuY2RuMy5idXNj/YWxpYnJlLmNvbS9m/aXQtaW4vMzYweDM2/MC9lOS8wZi9lOTBm/ZjM1NDM0ZWVlYjQ1/YTUxMTZlNGI3Zjgw/NmU2ZC5qcGc" alt="">
+                    </div>
+
+                <div class="libro">
+                    <img src="https://imgs.search.brave.com/XsH31BU-C4fys9SAAKO2r_tY6bx5WZRUpXSSDPhcfpo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jb250/ZW50djIudGFwLWNv/bW1lcmNlLmNvbS9j/b3Zlci9sYXJnZS85/Nzg5NTA1MTg2NzQ3/XzEuanBnP2lkX2Nv/bT0xMTUy" alt="">
+                </div>
+
+            <div class="libro">
+                <img src="https://i.pinimg.com/736x/9e/5a/4c/9e5a4ce7efae7c8b0395654bc5e6ec70.jpg" alt="">
+                </div>
+            <div class="libro">
+                <img src="https://imgs.search.brave.com/7BCOnq-VWQPIunqSO8qDMntzp-Kp_UWtTcw6xqp_zH0/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/YW5kZXNsaWJyZXJp/YS5jb20vNTU2MDUv/cm9iYS1jb21vLXVu/LWFydGlzdGEtZGUt/YXVzdGluLWtsZW9u/LWxpYnJvLWltcHJl/c28tOTc4OTU4ODkx/MjEwMy5qcGc" alt="">
+            </div>
                 </section>
         </main>
 
