--- a/public/literatura.html
+++ b/public/literatura.html
@@ -142,5 +142,26 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+<script>
+document.addEventListener("DOMContentLoaded", async () => {
+  const contenedor = document.querySelector(".contenedor-libros");
+  const res = await fetch("/api/libros/literatura");
+  const libros = await res.json();
+
+  contenedor.innerHTML = "";
+  libros.forEach(libro => {
+    const div = document.createElement("div");
+    div.classList.add("libro");
+    div.innerHTML = `
+      <img src="${libro.imagen}" alt="${libro.titulo}">
+      <p><strong>${libro.titulo}</strong><br>${libro.autor}</p>
+    `;
+    contenedor.appendChild(div);
+  });
+});
+</script>
+
+
+
     </body>
 </html>
