conecte toda la base de datos

--- a/public/ciencia.html
+++ b/public/ciencia.html
@@ -77,106 +77,7 @@
             </section>
 
             <!-- ---------- CONTENEDOR DE LIBROS---------- -->
-            <section class="contenedor-libros">
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/c3/c7/13/c3c713967ecb73b3411d8f104771f419.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/b1/fb/8b/b1fb8bb24da3c173a8d7861794b4c43b.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/65/14/17/65141759f16b0cae8f80d094c848572d.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/82/f6/be/82f6be1b0cf952acdebb06e2d75351a6.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/50/7a/4c/507a4c5a5efc8e3fdabc28a09510fa68.jpg" alt="">
-                </div>
-                <div class="libro">
-                    <img src="https://i.pinimg.com/1200x/0d/53/a5/0d53a54360db17ce58b36ed27e07d971.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/1200x/e9/f9/9f/e9f99f0e2140995405d1e580ae696e10.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://imgs.search.brave.com/DOlxF1IV7P7jQflDITBVk_EUwB64GzvaR9rV24FsSb4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wcm9h/c3NldHNwZGxjb20u/Y2Ruc3RhdGljczIu/Y29tL3VzdWFyaXMv/bGlicm9zL3RodW1i/cy8zZDk0NWY1YS1j/OTNiLTRkNGQtODJm/NS1mNjBiNDc4ZGYx/OGUvZF8yOTVfNTEw/L3BvcnRhZGFfbGEt/ZXJhLWRlbC1jYXBp/dGFsaXNtby1kZS1s/YS12aWdpbGFuY2lh/X3Nob3NoYW5hLXp1/Ym9mZl8yMDIwMDcw/NzA5NDgud2VicA" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/00/70/00/007000a6a2b422add359a16ad55445b0.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://imgs.search.brave.com/c8_iGAlgVPe3lciIhCSUYbeBLzYMnwcmAnTSYPd1u5E/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9odHRw/Mi5tbHN0YXRpYy5j/b20vRF9RX05QXzJY/XzYwNDgyMC1DQlQ3/OTkzMjcyNjQ1OF8x/MDIwMjQtVi53ZWJw" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/61/68/78/616878b1066340ade92a5d5f0aecb9ac.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/68/22/8c/68228c01e5f34ca043955ec45d572bf2.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/75/49/23/7549233b2c385e1595ca8eeabf2762b2.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/20/04/ab/2004abefa4dc3aa2568d591bc2daeb49.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/8e/c2/50/8ec250f7c2c78ee3d04758851804ed54.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/1200x/12/40/94/124094a17b0847992dee89067c57e83d.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/736x/3e/0f/a0/3e0fa07bc38e172e702c72f72eed058c.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/1200x/8d/a3/42/8da34255486eb222f1b7f7fbdc43d654.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="https://i.pinimg.com/1200x/63/1e/e1/631ee161556e2f34b54cc593d7c2ffd7.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="" alt="">
-                </div>
-            </section>
+            <section class="contenedor-libros" id="contenedor-libros"></section>
 
         </main>
 
@@ -197,6 +98,9 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
+<script src="js/categorias.js"></script>
+
 
     </body>
 </html>
