--- a/public/historia.html
+++ b/public/historia.html
@@ -77,50 +77,7 @@
              </section>
 
                <!-- ---------- CONTENEDOR DE LIBROS---------- -->
-             <section class="contenedor-libros">
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-             </section>
+             <section class="contenedor-libros" id="contenedor-libros"></section>
 
         </main>
 
@@ -141,6 +98,9 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 </script>
+
+<script src="js/categorias.js"></script>
+
 
     </body>
 </html>
