--- a/public/literatura.html
+++ b/public/literatura.html
@@ -77,49 +77,8 @@
              </section>
 
                <!-- ---------- CONTENEDOR DE LIBROS---------- -->
-             <section class="contenedor-libros">
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
+             <section class="contenedor-libros" id="contenedor-libros">
+                
              </section>
 
         </main>
@@ -142,24 +101,11 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
-<script>
-document.addEventListener("DOMContentLoaded", async () => {
-  const contenedor = document.querySelector(".contenedor-libros");
-  const res = await fetch("/api/libros/literatura");
-  const libros = await res.json();
 
-  contenedor.innerHTML = "";
-  libros.forEach(libro => {
-    const div = document.createElement("div");
-    div.classList.add("libro");
-    div.innerHTML = `
-      <img src="${libro.imagen}" alt="${libro.titulo}">
-      <p><strong>${libro.titulo}</strong><br>${libro.autor}</p>
-    `;
-    contenedor.appendChild(div);
-  });
-});
-</script>
+
+
+
+<script src="js/categorias.js"></script>
 
 
 
