conecte toda la base de datos faltante

--- a/public/desarrollo.html
+++ b/public/desarrollo.html
@@ -79,58 +79,13 @@
                <!-- ---------- CONTENEDOR DE LIBROS---------- -->
              <section class="contenedor-libros" id="contenedor-libros"></section>
              
-            <!-- ---------- CONTENEDOR DE LIBROS---------- -->
-            <section class="contenedor-libros">
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
 
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-
-                <div class="libro">
-                    <img src="Img/portada-prueva.jpg" alt="">
-                </div>
-            </section>
->>>>>>> 7d14cdd6dba1a8adec8cd268e9865015acaa9de2
 
         </main>
 
         <script>
 document.addEventListener("DOMContentLoaded", () => {
-  const IMAGEN_POR_DEFECTO = "Img/perfil-defecto.png";
+  const IMAGEN_POR_DEFECTO = "Img/perfil-defecto.png";{}
   const datosGuardados = JSON.parse(localStorage.getItem("perfilUsuario"));
 
   const imgPerfil = document.querySelector(".perfil-de-usuario img");
