--- a/public/registro.html
+++ b/public/registro.html
@@ -28,7 +28,7 @@
             <button type="submit" class="bton">registrarse</button>
 
             <div class="sesion">
-                <p>¿ya tienes una cuenta? <a href="index.html">iniciar sesion</a></p>
+                <p>¿ya tienes una cuenta? <a href="login.html">iniciar sesion</a></p>
             </div>
 
         </form>
