--- a/public/desarrollo.html
+++ b/public/desarrollo.html
@@ -53,7 +53,7 @@
         <!-- Header barran superriior -->
         <header class="contendedor-header">
                 <div class="buscador">
-                    <input type="text" placeholder="buscar libro" >
+                    <input type="text" id="buscador-libros" placeholder="buscar libro" >
                     <img src="Img/lupa.png" width="50px">
                 </div>
                 
