--- a/public/favoritos.html
+++ b/public/favoritos.html
@@ -23,9 +23,6 @@
                 <li>
                     <a href="favoritos.html"><span class="simbolos-esquema"><img src="Img/favoritos.png" alt=""></span>favoritos</a>
                 </li>
-                <li>
-                    <a href="historial-leidos.html"><span class="simbolos-esquema"><img src="Img/historial.png" alt=""></span>historial</a>
-                </li>
                 <h4>
                     <span>Cuentas</span>
                     <div class="menu-separado"></div>
@@ -77,7 +74,7 @@
              </section>
 
                <!-- ---------- CONTENEDOR DE LIBROS---------- -->
-             <section class="contenedor-libros">
+             <section class="contenedor-libros" id="contenedor-libros">
              </section>
 
         </main>
@@ -156,6 +153,8 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 </script>
+
+
 
 
     </body>
