--- a/public/registro.html
+++ b/public/registro.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div class="contenedor">
-        <form action="/registro" method="post">
+        <form > 
+            <!-- action="/registro" method="post" -->
             <div class="logo">
                 <img src="Img/logo_1.png" alt="logo libro">
             </div>
@@ -33,5 +34,8 @@
 
         </form>
     </div>
+
+    <script src="js/registro.js"></script>
+
 </body>
 </html>
